project(Cg)

if (WIN32)
  # manually copy to build and install the correct DLL
  if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
    set(CG_DLL bin64/cg.dll)
  else ()
    set(CG_DLL bin/cg.dll)
  endif ()
  install(FILES ${CG_DLL} DESTINATION bin/Release)
  install(FILES ${CG_DLL} DESTINATION bin/Debug)
  if (MINGW)
    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT})
  else ()
    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT}/Debug)
    file(COPY ${CG_DLL} DESTINATION ${OGREDEPS_RUNTIME_OUTPUT}/Release)
  endif ()
elseif (UNIX)
  # manually install the correct .so
  if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
    install(FILES lib64/libCg.so DESTINATION ${OGREDEPS_LIB_DIRECTORY})
  else ()
    install(FILES lib/libCg.so DESTINATION ${OGREDEPS_LIB_DIRECTORY})
  endif ()
endif ()

if (OGREDEPS_INSTALL_DEV)
  install(DIRECTORY include/ DESTINATION include)
  if (WIN32)
    # install the correct lib
    if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
      install(FILES lib64/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY}/Release)
    else ()
      install(FILES lib/cg.lib DESTINATION ${OGREDEPS_LIB_DIRECTORY}/Release)
    endif ()
  endif ()
endif ()
